<resources>
    <string name="app_name">这个是app的名称</string>
    <string name="we_sub_name">这里是专门显示教学的页面</string>
    <string name="button1">确认</string>
    <string name="editText1">名字</string>
    <string name="button2">跳转到tabbar</string>
    <string name="button3">文本框</string>
    <string name="button4">可编辑文本框</string>
    <string name="button5">按钮使用</string>
    <string name="button6">复选和单选框</string>
    <string name="button7">开关按钮</string>
    <string name="button8">图片视图</string>
    <string name="button9">图片按钮</string>
    <string name="button10">自定义view</string>
    <string name="button11">线性布局</string>
    <string name="button12">布局重心</string>
    <string name="button13">padding和margin</string>
    <string name="button14">相对布局</string>
    <string name="button15">表格布局</string>
    <string name="button16">帧布局</string>
    <string name="button17">绝对布局</string>
    <string name="button18">网格布局</string>
    <string name="button19">Android事件</string>
    <string name="button20">事件监听</string>
    <string name="button21">事件回调</string>
    <string name="button22">系统事件</string>
    <string name="button23">listview</string>
    <string name="button24">adapter</string>
    <string name="button25">listactivity</string>
    <string name="button26">arrayadapter</string>
    <string name="button27">simpleadapter</string>
    <string name="button28">baseadapter</string>
    <string name="button29">listview优化</string>
    <string name="button30">listview数据更新</string>
    <string name="button31">GridView简单使用</string>
    <string name="button32">下拉框Spinner</string>
    <string name="button33">自动完成文本框</string>
    <string name="button34">可折叠列表ExpandableListView</string>
    <string name="button35">AdapterViewFlipper图片轮播</string>
    <string name="button36">StackView卡片堆叠</string>
    <string name="button37">进度条ProgressBar</string>
    <string name="button38">自定义进度条</string>
    <string name="button39">拖动条SeekBar和星级评分条RatingBar</string>
    <string name="button40">视图切换组件ViewSwitcher</string>
    <string name="button41">ImageSwitcher使用</string>
    <string name="button42">TextSwitcher使用</string>
    <string name="button43">viewflipper引导页和轮播图</string>
    <string name="button44">日期选择器</string>
    <string name="button45">时间选择器</string>
    <string name="button46">数值选择器NumberPicker</string>
    <string name="button47">时钟组件</string>
    <string name="button48">日历和定时器</string>
    <string name="button49">滚动视图</string>
    <string name="button50">搜索框</string>
    <string name="button51">选项卡TabHost</string>
    <string name="button52">RecyclerView</string>
    <string name="button53">RecyclerView分割线</string>
    <string name="button54">RecyclerView点击事件</string>
    <string name="button55">RecyclerView数据动态更新</string>
    <string name="button56">RecyclerView首尾视图</string>
    <string name="button57">ViewPager实现引导页</string>
    <string name="button58">ViewPager完成TabHost效果</string>
    <string name="button59">CardView卡片式布局</string>
    <string name="button60">SwipeRefreshLayout下拉刷新</string>
    <string name="button61">Activity入门</string>
    <string name="button62">Activity启动和关闭</string>
    <string name="button63">生命周期</string>
    <string name="button64">Activity数据保存和横竖屏切换</string>
    <string name="button65">Activity任务栈</string>
    <string name="button66">四大组件的纽带Intent</string>
    <string name="button67">Intent 属性详解（上）</string>
    <string name="button68">Intent 属性详解（下）</string>
    <string name="button69">Activity数据传递</string>
    <string name="button70">Activity数据回传</string>
    <string name="button71">Activity间数据传递方法汇总</string>
    <string name="button72">引入Fragment</string>
    <string name="button73">Fragment使用</string>
    <string name="button74">Fragment生命周期</string>
    <string name="button75">Fragment添加、删除、替换</string>
    <string name="button76">Fragment显示和隐藏、绑定和解绑</string>
    <string name="button77">Fragment回退栈及弹出方法</string>
    <string name="title_activity_tabbar">tabbar</string>
    <string name="title_home">标题左</string>
    <string name="title_dashboard">标题中</string>
    <string name="title_notifications">标题右</string>
</resources>
