<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/app_name"
            android:ems="10"
            android:id="@+id/editText1"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button1"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText1"
            android:text="@string/button1" tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/editText1" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="sendMessage"/>
    <Button
            android:text="@string/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:onClick="tabbar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText1" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" app:layout_constraintStart_toEndOf="@+id/button2"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText1" android:onClick="we_sub_textview"/>
    <Button
            android:text="@string/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText1" app:layout_constraintStart_toEndOf="@+id/button3"
            android:layout_marginStart="8dp" android:onClick="we_sub_edittext"/>
    <Button
            android:text="@string/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:onClick="we_sub_button"/>
    <Button
            android:text="@string/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6" app:layout_constraintStart_toEndOf="@+id/button5"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button2" android:onClick="we_sub_check_radio"/>
    <Button
            android:text="@string/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7" app:layout_constraintStart_toEndOf="@+id/button6"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button2" android:onClick="we_sub_togglebutton_switch"/>
    <Button
            android:text="@string/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button8" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:onClick="we_sub_imageview"/>
    <Button
            android:text="@string/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button9" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button6" app:layout_constraintStart_toEndOf="@+id/button8"
            android:layout_marginStart="8dp" android:onClick="we_sub_imagebutton"/>
    <Button
            android:text="@string/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button10" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button7" app:layout_constraintStart_toEndOf="@+id/button9"
            android:layout_marginStart="8dp" android:onClick="we_sub_customview"/>
    <Button
            android:text="@string/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button11" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:onClick="we_sub_linearlayout"/>
    <Button
            android:text="@string/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button9" app:layout_constraintStart_toEndOf="@+id/button11"
            android:layout_marginStart="8dp" android:onClick="we_sub_gravity_layout_gravity"/>
    <Button
            android:text="@string/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button12" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button10" app:layout_constraintStart_toEndOf="@+id/button"
            android:layout_marginStart="8dp" android:onClick="we_sub_padding_margin"/>
    <Button
            android:text="@string/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button13" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button11" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:onClick="we_sub_relativelayout"/>
    <Button
            android:text="@string/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button14" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintStart_toEndOf="@+id/button13"
            android:layout_marginStart="8dp" android:onClick="we_sub_tablelayout"/>
    <Button
            android:text="@string/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button15" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button12" app:layout_constraintStart_toEndOf="@+id/button14"
            android:layout_marginStart="8dp" android:onClick="we_sub_framelayout"/>
    <Button
            android:text="@string/button17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button16" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button13" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:onClick="we_sub_absolutelayout"/>
    <Button
            android:text="@string/button18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button17" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button14" app:layout_constraintStart_toEndOf="@+id/button16"
            android:layout_marginStart="8dp" android:onClick="we_sub_gridlayout"/>
    <Button
            android:text="@string/button19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button18" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button15" app:layout_constraintStart_toEndOf="@+id/button17"
            android:layout_marginStart="8dp" android:onClick="we_sub_33"/>
</android.support.constraint.ConstraintLayout>